php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #33999 object remains object when cast to int
Submitted: 2005-08-04 23:49 UTC Modified: 2005-08-05 11:02 UTC
From: crywolf at kyndimarion dot net Assigned: dmitry (profile)
Status: Closed Package: Class/Object related
PHP Version: 5CVS-2005-08-05 OS: *
Private report: No CVE-ID: None
 [2005-08-04 23:49 UTC] crywolf at kyndimarion dot net
Description:
------------
When attempting to cast an object to an int, it remains untouched.  No warnings or errors are displayed.  The results are the same for (int), intval(), and settype().  float, bool, string, and array all seem to work correctly.  I get the same results in both 5.0.3 and 5.1.0b3.  In 4.3.11, an object can be cast to int.


Reproduce code:
---------------
<?php
error_reporting(E_ALL);

class Foo {
var $bar = "bat";
}

$foo = new Foo;
var_dump($foo);

$bar = (int)$foo;
var_dump($bar);

$baz = (float)$foo;
var_dump($baz);

?>


Expected result:
----------------
object(Foo)#1 (1) {
  ["bar"]=>
  string(3) "bat"
}
int(1)
float(1)

Actual result:
--------------
object(Foo)#1 (1) {
  ["bar"]=>
  string(3) "bat"
}
object(Foo)#1 (1) {
  ["bar"]=>
  string(3) "bat"
}

Notice: Object of class Foo could not be converted to double in /home/crywolf/Test/cast_object.php on line 14
float(1)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-08-05 00:04 UTC] tony2001@php.net
Dmitry, I guess we need to return at least objects index in  this case.
Or maybe use the same way we use when compatibility_mode is on.
What do you think?
 [2005-08-05 11:02 UTC] dmitry@php.net
Fixed in CVS HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 21:00:01 2026 UTC