Fixed bug #33999 (object remains object when cast to int)